--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "export": "nuxt export",
     "serve": "nuxt serve"
   },
+  "resolutions": {
+    "core-js": "2.6.11"
+  },
   "dependencies": {
     "@nuxtjs/axios": "^5.11.0",
-    "nuxt": "^2.13.0"
+    "nuxt": "^2.13.0",
+    "swiper": "^5.4.5",
+    "vue-awesome-swiper": "^4.1.1"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.0.0",
