--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt --port 3334",
     "build": "nuxt build",
     "start": "nuxt start",
     "export": "nuxt export",
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.11.0",
+    "moment": "^2.27.0",
     "nuxt": "^2.13.0",
+    "nuxt-mq": "^2.0.1",
     "swiper": "^5.4.5",
     "vue-awesome-swiper": "^4.1.1"
   },
