--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nuxt-mq": "^2.0.1",
     "nuxt-validate": "^1.0.1",
     "swiper": "^5.4.5",
-    "vue-awesome-swiper": "^4.1.1"
+    "vue-awesome-swiper": "^4.1.1",
+    "vuex-persist": "^3.1.0"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.0.0",
