--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.11.0",
+    "crypto-js": "^4.0.0",
+    "js-cookie": "^2.2.1",
     "moment": "^2.27.0",
     "nuxt": "^2.13.0",
     "nuxt-mq": "^2.0.1",
     "nuxt-validate": "^1.0.1",
     "swiper": "^5.4.5",
+    "uuid": "^8.3.0",
     "vue-awesome-swiper": "^4.1.1",
     "vuex-persist": "^3.1.0"
   },
