--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.11.0",
     "crypto-js": "^4.0.0",
+    "deep-clone": "^3.0.3",
     "js-cookie": "^2.2.1",
     "moment": "^2.27.0",
     "nuxt": "^2.13.0",
