--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto-js": "^4.0.0",
     "deep-clone": "^3.0.3",
     "js-cookie": "^2.2.1",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "nuxt": "^2.13.0",
     "nuxt-mq": "^2.0.1",
