--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest-serializer-vue": "^2.0.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
-    "vue-jest": "^3.0.7"
+    "vue-jest": "^3.0.7",
+    "supertest": "^6.0.1"
   }
 }
