--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-awesome-countdown": "^1.1.4",
     "vue-awesome-swiper": "^4.1.1",
     "vue-responsive-video-background-player": "^1.2.2",
+    "vue-scrollto": "^2.20.0",
     "vuex-persist": "^3.1.0"
   },
   "devDependencies": {
