vietnam prize setting list

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ phoneCode=+84
 maxPhoneNumber=10
 cdsTrackingClientId=7cd60679-4231-4c85-b228-0d8c1ed22c28
 pixelUrl=https://beta.apac.realtime-sdk.gcds.coke.com/
-origin=
+origin=https://cokestudiouat.coca-cola.co.th/
 voucherParameter=c
 configID=1e0b8kkwap0rj,22mf8kkqk551f
 lotID=445590,445586
