--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ cdsTrackingClientId=7cd60679-4231-4c85-b228-0d8c1ed22c28
 pixelUrl=https://beta.apac.realtime-sdk.gcds.coke.com/
 origin=
 voucherParameter=c
-language=th
+language=en
