--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ phoneCode=+66
 maxPhoneNumber=10
 cdsTrackingClientId=7cd60679-4231-4c85-b228-0d8c1ed22c28
 pixelUrl=https://beta.apac.realtime-sdk.gcds.coke.com/
-origin=https://cokestudiouat.coca-cola.co.th/
+origin=
 voucherParameter=c
 language=th
