add GTM library

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ pixelUrl=https://beta.apac.realtime-sdk.gcds.coke.com/
 origin=
 voucherParameter=c
 language=th
-GOOGLE_ANALYTICS_ID=
+GTM=GTM-TGJL2CD
