use prod real id and url

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 phoneCode=+66
 maxPhoneNumber=10
-cdsTrackingClientId=7cd60679-4231-4c85-b228-0d8c1ed22c28
-pixelUrl=https://beta.apac.realtime-sdk.gcds.coke.com/
+cdsTrackingClientId=c06f23c7-2c00-4e6f-8738-ebf5b65915cc
+pixelUrl=https://apac.realtime-sdk.gcds.coke.com/
 origin=
 voucherParameter=c
 language=th
