give real url and client id for pixel

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 phoneCode=+84
 maxPhoneNumber=10
-cdsTrackingClientId=27672655-2380-4155-a391-3d38aa741bf1
-pixelUrl=https://beta.apac.realtime-sdk.gcds.coke.com/
+cdsTrackingClientId=5134a889-6e95-4138-90a0-6f9faaa1fdab
+pixelUrl=https://apac.realtime-sdk.gcds.coke.com/
 origin=
 voucherParameter=c
 configID=1e0b8kkwap0rj,22mf8kkqk551f
