--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ cdsTrackingClientId=5134a889-6e95-4138-90a0-6f9faaa1fdab
 pixelUrl=https://apac.realtime-sdk.gcds.coke.com/
 origin=
 voucherParameter=c
-configID=1e0b8kkwap0rj
-lotID=445590,445586
+configID=pmfa08kllwjc0p
+lotID=9726604,9726605
 language=vn
 GTM=GTM-PCD29WM
