#39 fixed. show voucher for certain prize

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ cdsTrackingClientId=27672655-2380-4155-a391-3d38aa741bf1
 pixelUrl=https://beta.apac.realtime-sdk.gcds.coke.com/
 origin=
 voucherParameter=c
+prizeHasVoucher=kkwav9kv,kkwbp0f1
 configID=1e0b8kkwap0rj
 lotID=445590,445586
 language=vn
