--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ origin=
 voucherParameter=c
 prizeHasVoucher=kllxazbe,kllxfai0
 configID=pmfa08kllwjc0p
-lotID=9726604,9726605
+lotID=9726604,9726605,9727022
 language=vn
 GTM=GTM-PCD29WM
