--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ maxPhoneNumber=9
 origin=
 voucherParameter=c
 prizeHasVoucher=kkwav9kv,kkwbp0f1
+prizeShowOnce=kkwbxo87
 configID=1e0b8kkwap0rj
 lotID=445590,445586
 language=vn
