--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ maxPhoneNumber=9
 origin=
 voucherParameter=c
 prizeHasVoucher=kllxazbe,kllxfai0
-prizeShowOnce=kkwbxo87
+prizeShowOnce=kno5dxv0
 configID=pmfa08kllwjc0p
 lotID=9726604,9726605,9727022
 language=vn
