add prize has voucher

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ minPhoneNumber=9
 maxPhoneNumber=9
 origin=
 voucherParameter=c
-prizeHasVoucher=kkwav9kv,kkwbp0f1
+prizeHasVoucher=kkwav9kv,kkwbp0f1,kmogl160
 prizeShowOnce=kkwbxo87
 configID=1e0b8kkwap0rj
 lotID=445590,445586
