add new voucher

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ minPhoneNumber=9
 maxPhoneNumber=9
 origin=
 voucherParameter=c
-prizeHasVoucher=kllxazbe,kllxfai0
+prizeHasVoucher=kllxazbe,kllxfai0,knyeli3q
 prizeShowOnce=kno5dxv0
 configID=pmfa08kllwjc0p
 lotID=9726604,9726605,9727022
