winner layout update and integration

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 phoneCode=65
 maxPhoneNumber=8
-origin=
+origin=https://cokestudiouat.coca-cola.com.sg
 voucherParameter=c
 language=en
 GTM=GTM-KF4XRMM
