indonesia layout done

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-phoneCode=66
+phoneCode=62
 minPhoneNumber=9
-maxPhoneNumber=9
+maxPhoneNumber=11
 origin=
 voucherParameter=c
-language=th
+language=id
 GTM=GTM-TGJL2CD
