removed origin from env

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 phoneCode=60
 maxPhoneNumber=10
-origin=https://cokestudiouat.coca-cola.com.sg/
+origin=
 voucherParameter=c
 language=my
 GTM=GTM-5XJ2Q2Z
