changes for campaign description

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 phoneCode=66
 minPhoneNumber=9
 maxPhoneNumber=9
-origin=
+origin= https://cokestudiouat.coca-cola.co.th/
 voucherParameter=c
 language=th
 GTM=GTM-TGJL2CD
