--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 phoneCode=66
 minPhoneNumber=9
 maxPhoneNumber=9
-origin= https://cokestudiouat.coca-cola.co.th/
+origin= 
 voucherParameter=c
 language=th
 GTM=GTM-TGJL2CD
