--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 phoneCode=62
 minPhoneNumber=10
 maxPhoneNumber=12
-origin=https://cokestudiouat.coca-cola.co.id
+origin=
 voucherParameter=c
 language=id
 GTM=GTM-5J9CBM8
