--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "nuxt-validate": "^1.0.1",
     "swiper": "^5.4.5",
     "uuid": "^8.3.0",
+    "vue": "^2.6.14",
     "vue-awesome-countdown": "^1.1.4",
     "vue-awesome-swiper": "^4.1.1",
     "vue-responsive-video-background-player": "^1.2.2",
     "vue-scrollto": "^2.20.0",
+    "vue-server-renderer": "^2.6.14",
     "vuex-persist": "^3.1.0"
   },
   "devDependencies": {
