--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ configID=1e0b8kkwap0rj
 lotID=445590,445586
 language=vn
 GTM=GTM-PCD29WM
+RECAPTCHA_SITE_KEY=6LfjNnobAAAAAD_nI4xGHQnK8myClf7ykGqUnGfY
