--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 phoneCode=66
 minPhoneNumber=9
 maxPhoneNumber=9
-origin= 
+origin=
 voucherParameter=c
 language=th
 GTM=GTM-TGJL2CD
+RECAPTCHA_SITE_KEY=6LfjNnobAAAAAD_nI4xGHQnK8myClf7ykGqUnGfY
