adding new translation

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 phoneCode=84
 minPhoneNumber=9
 maxPhoneNumber=9
-origin=
+origin=http://016450-coupcamb2021ca-dev.ap-southeast-1.elasticbeanstalk.com
 voucherParameter=c
 prizeHasVoucher=kkwav9kv,kkwbp0f1,kmogl160
 prizeShowOnce=kkwbxo87
 configID=1e0b8kkwap0rj
 lotID=445590,445586
-language=vn
+language=kh
 GTM=GTM-PCD29WM
 RECAPTCHA_SITE_KEY=6LfjNnobAAAAAD_nI4xGHQnK8myClf7ykGqUnGfY
