adding new translation

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 phoneCode=84
 minPhoneNumber=9
 maxPhoneNumber=9
-origin=http://016450-coupcamb2021ca-dev.ap-southeast-1.elasticbeanstalk.com
+origin=
 voucherParameter=c
 prizeHasVoucher=kkwav9kv,kkwbp0f1,kmogl160
 prizeShowOnce=kkwbxo87
