Update the configID

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ origin=
 voucherParameter=c
 prizeHasVoucher=kkwav9kv,kkwbp0f1,kmogl160
 prizeShowOnce=kkwbxo87
-configID=1e0b8kkwap0rj
+configID=z2xtqi9ks8ndwx3
 lotID=445590,445586
 language=kh
 GTM=GTM-PCD29WM
