prize has voucher change and configuration

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ phoneCode=84
 minPhoneNumber=9
 maxPhoneNumber=9
 origin=
-voucherParameter=c
-prizeHasVoucher=kkwav9kv,kkwbp0f1,kmogl160
+voucherParameter=af_coupon_code
+prizeHasVoucher=ks8o4ixh
 prizeShowOnce=kkwbxo87
 configID=z2xtqi9ks8ndwx3
 lotID=445590,445586
