--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "deep-clone": "^3.0.3",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
+    "mobile-detect": "^1.4.5",
     "moment": "^2.27.0",
     "nuxt": "^2.13.0",
     "nuxt-mq": "^2.0.1",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "7.12.11",
+    "@nuxtjs/device": "^2.1.0",
     "@nuxtjs/style-resources": "^1.0.0",
     "@nuxtjs/vuetify": "^1.11.2",
     "@vue/test-utils": "^1.1.2",
