update prize link logic

--- a/.env
+++ b/.env
@@ -3,7 +3,9 @@ minPhoneNumber=8
 maxPhoneNumber=9
 origin=
 voucherParameter=af_coupon_code
+voucherParameter2=af_cid
 prizeHasVoucher=ks8o4ixh
+prizePlaylist=ks8o5wc3
 prizeShowOnce=kkwbxo87
 configID=z2xtqi9ks8ndwx3
 lotID=445590,445586
