--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ maxPhoneNumber=9
 origin=
 voucherParameter=c
 language=th
-GTM=GTM-TGJL2CD
+GTM=GTM-TMCMZB4
 RECAPTCHA_SITE_KEY=6LfjNnobAAAAAD_nI4xGHQnK8myClf7ykGqUnGfY
