--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ prizeShowOnce=kkwbxo87
 configID=z2xtqi9ks8ndwx3
 lotID=445590,445586
 language=kh
-GTM=GTM-PCD29WM
+GTM=GTM-56BVPVL
 RECAPTCHA_SITE_KEY=6LfjNnobAAAAAD_nI4xGHQnK8myClf7ykGqUnGfY
